--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 	<div style="float: left; margin: 20px; width: 160px; height: 300px;">
-		<img src="DDT-logo.png" alt"DDT logo" /> 
+		<img src="ddt-logo.png" alt"DDT logo" /> 
 	</div>
 	<div style="padding: 10px;">
 		<p> DDT is an Eclipse IDE for the D programming language.</p>
